Create artchitecture of server and get error api_routers file
