# Utils/Constants.js
@@ -1,0 +1,9 @@
+ global.API_BASE_PATH='/api';
+
+// API ENDPOINTS
+ global.API_SECURE_BASE_PATH='/secure'
+ global.API_USER_BASE_PATH='/users'
+ global.APT_ARTICLES_PATH='/articles'
+ global.API_CATEGORIES_PATH='/categories'
+ global.API_LANGUAGES_PATH='/languages'
+ global.API_LINKS_PATH='/links'
