# components/user/user-routers.js
@@ -1,0 +1,12 @@
+const express=require('express');
+      router=express.Router();
+      userController=require('./user-controller')
+      
+      router.get('',userController.test)
+
+      
+
+
+
+
+module.exports=router;      
